Corrected the form-width on mobile

--- a/src/sass/sections/_5.scss
+++ b/src/sass/sections/_5.scss
@@ -16,6 +16,8 @@
     }
 
     form {
+      max-width     : 260px;
+      margin        : 0 auto;
       display       : flex;
       flex-direction: column;
 
